# gamma-cli-test

./: .gitignore  .travis.yml  MANIFEST.in  README.md  pyproject.toml  readme.md  setup.py
curriculum/project-01/blog/: readme.md
curriculum/project-01/code-style/: readme.md
curriculum/project-01/complexity/: readme.md
curriculum/project-01/day-1-materials/: readme.md
curriculum/project-01/design/: readme.md
curriculum/project-01/git-1/: readme.md
curriculum/project-01/git-2/: readme.md
curriculum/project-01/matplotlib/: readme.md
curriculum/project-01/numpy/: readme.md
curriculum/project-01/pair_demo/: readme.md
curriculum/project-01/presentation-guide/: readme.md
curriculum/project-01/project-01-presentation/: readme.md
curriculum/project-01/python-advanced/: readme.md
curriculum/project-01/python-review/: readme.md
curriculum/project-01/seaborn/: readme.md
gamma/: __init__.py  daily.html.py  main.py  utils.py
gamma/templates/: daily.html.j2
tests/: test_cli.py
