[tool.poetry]
name = "gamma-cli"
version = "0.1.15"
description = "Command line tool for Gamma curriculum."
authors = ["artificialsoph <s@soph.info>"]
packages = [
    { include = "gamma" },
]
include = ["templates/*"]

[tool.poetry.scripts]
gamma='gamma.main:gamma'

[tool.poetry.dependencies]
python = "^3.6"
Click = "^7.0"
Pandas = "^0.23.4"
"path.py" = "^11.5"
python-frontmatter = "^0.4.4"
beautifulsoup4 = "^4.7"
jinja2 = "^2.10"
xlsxwriter = "^1.1"
colorama = "^0.4.1"
tabulate = "^0.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
